Implementation of Soft delete