@@ -6,6 +6,7 @@ import com.fincons.exception.DuplicateException;
 import com.fincons.exception.ResourceNotFoundException;
 import com.fincons.mapper.AbilityMapper;
 import com.fincons.repository.AbilityRepository;
+import io.micrometer.common.util.StringUtils;
 import org.springframework.stereotype.Service;
 import java.util.List;
 
@@ -24,12 +25,12 @@ public class AbilityService implements IAbilityService{
 
     @Override
     public List<Ability> findAllAbilities() {
-        return abilityRepository.findAll();
+        return abilityRepository.findAllByDeletedFalse();
     }
 
     @Override
     public Ability findAbilityByName(String name)  {
-        Ability ability = abilityRepository.findByName(name);
+        Ability ability = abilityRepository.findByNameAndDeletedFalse(name);
         if(ability==null || name.isEmpty()){
            throw new ResourceNotFoundException("Ability " + name + " does not exists!");
         }
@@ -38,46 +39,60 @@ public class AbilityService implements IAbilityService{
 
     @Override
     public Ability createAbility(AbilityDto abilityDto) throws DuplicateException {
-        if(abilityDto.getName().isBlank()){
-            throw new IllegalArgumentException("The name of ability can't be empty");
+
+        if (StringUtils.isBlank(abilityDto.getName())) {
+            throw new IllegalArgumentException("The name of ability can't be blank");
         }
-        if(abilityRepository.existsByNameIgnoreCase(abilityDto.getName())){
+
+        if (abilityRepository.existsByNameAndDeletedFalse(abilityDto.getName())) {
             throw new DuplicateException("The name of ability already exists");
         }
-        Ability abilityToSave = abilityMapper.mapDtoToAbility(abilityDto);
-        return abilityRepository.save(abilityToSave);
+        Ability ability = new Ability();
+        ability.setName(abilityDto.getName());
+        return abilityRepository.save(ability);
     }
+
 
     @Override
     public Ability updateAbility(long id, AbilityDto abilityDto) throws DuplicateException {
 
-        Ability abilityToModify = abilityRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Ability does not exist"));
-
-        if (abilityDto.getName() != null && !abilityRepository.existsByName(abilityDto.getName())) {
-            abilityToModify.setName(abilityDto.getName());
-        }else if(abilityRepository.existsByName(abilityDto.getName())){
-            throw new DuplicateException("Ability already exists!");
+        Ability abilityToModify = abilityRepository.findByIdAndDeletedFalse(id);
+        if(abilityToModify == null){
+            throw new ResourceNotFoundException("Ability does not exist");
         }
 
+        if(abilityDto.getName() != null){
+            if(!abilityRepository.existsByNameAndIdNot(abilityDto.getName(),abilityToModify.getId())){
+                abilityToModify.setName(abilityDto.getName());
+            }else{
+                throw new DuplicateException("Ability already exists");
+            }
+        } else {
+            throw new IllegalArgumentException("Ability name cannot be null");
+        }
         return abilityRepository.save(abilityToModify);
 
     }
 
     @Override
     public void deleteAbility(long id) {
-        if (!abilityRepository.existsById(id)) {
+        validateAbilityById(id);
+        Ability abilityToDelete = abilityRepository.findByIdAndDeletedFalse(id);
+        abilityToDelete.setDeleted(true);
+        abilityRepository.save(abilityToDelete);
+    }
+
+    private void validateAbilityById(long id) {
+        if (!abilityRepository.existsByIdAndDeletedFalse(id)) {
             throw new ResourceNotFoundException("The ability does not exist");
         }
-
-        abilityRepository.deleteById(id);
     }
 
     @Override
     public Ability findAbilityById(long id) {
-        if (!abilityRepository.existsById(id)) {
+        if (!abilityRepository.existsByIdAndDeletedFalse(id)) {
             throw new ResourceNotFoundException("The ability does not exist!");
         }
-        return abilityRepository.findById(id).orElse(null);
+        return abilityRepository.findByIdAndDeletedFalse(id);
     }
 }
